change fontawsome path from relative to absolute in styles.scss

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,9 +1,9 @@
 // You probably already include the core styles
-@import "./../../node_modules/@fortawesome/fontawesome-pro/scss/fontawesome.scss";
+@import "node_modules/@fortawesome/fontawesome-pro/scss/fontawesome.scss";
 // You can include all the other styles the same as before
-@import "./../../node_modules/@fortawesome/fontawesome-pro/scss/solid.scss";
-@import "./../../node_modules/@fortawesome/fontawesome-pro/scss/brands.scss";
-@import "./../../node_modules/@fortawesome/fontawesome-pro/scss/regular.scss";
+@import "node_modules/@fortawesome/fontawesome-pro/scss/solid.scss";
+@import "node_modules/@fortawesome/fontawesome-pro/scss/brands.scss";
+@import "node_modules/@fortawesome/fontawesome-pro/scss/regular.scss";
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
