--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -39,7 +39,7 @@ html {
   height: 100vh;
 }
 body {
-  @apply text-base h-full text-zinc-900 font-sans;
+  @apply text-base h-full text-zinc-900;
 }
 #wrapper {
   @apply h-full flex flex-col;
